spacing fix

--- a/scss/wp-bootstrap4.scss
+++ b/scss/wp-bootstrap4.scss
@@ -211,8 +211,8 @@ a img.alignleft {
 
 .folioed {
 	.folio {
-		margin-top: $spacer-y;
-		margin-bottom: $spacer-y;
+		// margin-top: $spacer-y;
+		// margin-bottom: $spacer-y;
 		padding-top: $spacer-y;
 		padding-bottom: $spacer-y;
 
